--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,21 @@ img {
   display: block;
   max-width: 100%;
 }
+.timer {
+  display: flex;
+  gap: 16px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 24px;
+}
+
+.label {
+  font-size: 14px;
+}
